parslers-benchmark/src/tests/invalid/semanticErr/variables/undeclaredVar.wacc
# assignment to undeclared variable

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  x = 10
end
